--- a/adversarial_classifier/notebooks/star_galaxy.ipynb
+++ b/adversarial_classifier/notebooks/star_galaxy.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run this notebook first\n",
+    "\n",
+    "This notebook will train a star-galaxy classifier. You will need to update some of the options (e.g., `data_dir`, possibly `tnsrbrd_out_dir`) below for your local situation. If you need a copy of the data, see the instructions at the root-level README."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
